[gd_scene load_steps=6 format=3 uid="uid://c1x8f17web2qr"]

[ext_resource type="Script" path="res://scenes/game/main.gd" id="1_7v26j"]
[ext_resource type="Script" path="res://scenes/game/game.gd" id="2_wrxnl"]
[ext_resource type="Texture2D" uid="uid://db5vhso41ajgc" path="res://assets/square.png" id="3_iledv"]
[ext_resource type="Script" path="res://scenes/game/bonus_manager.gd" id="4_r5ahg"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ufxmy"]
size = Vector2(223, 67.25)

[node name="main" type="Node2D"]
script = ExtResource("1_7v26j")

[node name="sprite" type="Sprite2D" parent="."]
position = Vector2(577, 33.5)
scale = Vector2(9, 0.523438)
texture = ExtResource("3_iledv")

[node name="Game" type="Node2D" parent="."]
script = ExtResource("2_wrxnl")

[node name="label" type="Label" parent="."]
offset_right = 52.0
offset_bottom = 49.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="bonus_manager" type="Node2D" parent="."]
script = ExtResource("4_r5ahg")

[node name="trashbin" type="Node2D" parent="bonus_manager"]

[node name="sprite" type="Sprite2D" parent="bonus_manager/trashbin"]
modulate = Color(0, 0, 0, 1)
position = Vector2(1041, 33.5)
scale = Vector2(1.75, 0.523438)
texture = ExtResource("3_iledv")

[node name="area" type="Area2D" parent="bonus_manager/trashbin" groups=["trash"]]

[node name="collision" type="CollisionShape2D" parent="bonus_manager/trashbin/area"]
position = Vector2(1040.5, 34)
shape = SubResource("RectangleShape2D_ufxmy")

[node name="store" type="Node2D" parent="bonus_manager"]

[node name="bonus_1" type="Sprite2D" parent="bonus_manager/store"]
modulate = Color(0, 0, 0, 1)
position = Vector2(262, 34)
scale = Vector2(0.46875, 0.46875)
texture = ExtResource("3_iledv")

[node name="bonus_2" type="Sprite2D" parent="bonus_manager/store"]
modulate = Color(0, 0, 0, 1)
position = Vector2(338, 34)
scale = Vector2(0.492188, 0.492188)
texture = ExtResource("3_iledv")

[node name="bonus_3" type="Sprite2D" parent="bonus_manager/store"]
modulate = Color(0, 0, 0, 1)
position = Vector2(418, 34)
scale = Vector2(0.492188, 0.492188)
texture = ExtResource("3_iledv")

[node name="colors" type="Node2D" parent="bonus_manager"]
position = Vector2(724, 72)

[node name="red" type="Node2D" parent="bonus_manager/colors"]
position = Vector2(-2.15, 0)

[node name="background" type="Sprite2D" parent="bonus_manager/colors/red"]
modulate = Color(0, 0, 0, 1)
position = Vector2(24, -39)
scale = Vector2(0.234375, 0.484375)
texture = ExtResource("3_iledv")

[node name="color" type="Sprite2D" parent="bonus_manager/colors/red"]
modulate = Color(1, 0, 0, 1)
position = Vector2(35, -12)
rotation = 3.14159
scale = Vector2(0.171875, 0.421875)
texture = ExtResource("3_iledv")
centered = false

[node name="green" type="Node2D" parent="bonus_manager/colors"]
position = Vector2(39.98, 0)

[node name="background" type="Sprite2D" parent="bonus_manager/colors/green"]
modulate = Color(0, 0, 0, 1)
position = Vector2(24, -39)
scale = Vector2(0.234375, 0.484375)
texture = ExtResource("3_iledv")

[node name="color" type="Sprite2D" parent="bonus_manager/colors/green"]
modulate = Color(0, 1, 0.0600204, 1)
position = Vector2(35, -12)
rotation = 3.14159
scale = Vector2(0.171875, 0.421875)
texture = ExtResource("3_iledv")
centered = false

[node name="blue" type="Node2D" parent="bonus_manager/colors"]
position = Vector2(82.585, 0)

[node name="background" type="Sprite2D" parent="bonus_manager/colors/blue"]
modulate = Color(0, 0, 0, 1)
position = Vector2(24, -39)
scale = Vector2(0.234375, 0.484375)
texture = ExtResource("3_iledv")

[node name="color" type="Sprite2D" parent="bonus_manager/colors/blue"]
modulate = Color(0, 0.146028, 1, 1)
position = Vector2(35, -12)
rotation = 3.14159
scale = Vector2(0.171875, 0.421875)
texture = ExtResource("3_iledv")
centered = false
